Make_Install_Errors
Making install in postprocessing/combine_blobs
make[1]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/combine_blobs'
make[2]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/combine_blobs'
 /usr/bin/mkdir -p '/scratch/users/mborrus/bin'
  /usr/bin/install -c combine_blobs '/scratch/users/mborrus/bin'
make[2]: Nothing to be done for `install-data-am'.
make[2]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/combine_blobs'
make[1]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/combine_blobs'
Making install in postprocessing/combine_restarts
make[1]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/combine_restarts'
make[2]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/combine_restarts'
 /usr/bin/mkdir -p '/scratch/users/mborrus/bin'
 /usr/bin/install -c combine_restarts '/scratch/users/mborrus/bin'
make[2]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/combine_restarts'
make[1]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/combine_restarts'
Making install in postprocessing/iceberg_comb
make[1]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/iceberg_comb'
make[2]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/iceberg_comb'
 /usr/bin/mkdir -p '/scratch/users/mborrus/bin'
 /usr/bin/install -c iceberg_comb.sh '/scratch/users/mborrus/bin'
make[2]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/iceberg_comb'
make[1]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/iceberg_comb'
Making install in postprocessing/land_utils
make[1]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/land_utils'
make[2]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/land_utils'
 /usr/bin/mkdir -p '/scratch/users/mborrus/bin'
  /usr/bin/install -c combine-ncc decompress-ncc is-compressed scatter-ncc '/scratch/users/mborrus/bin'
 /usr/bin/mkdir -p '/scratch/users/mborrus/bin'
 /usr/bin/install -c combine-lumip-vars.py '/scratch/users/mborrus/bin'
make[2]: Nothing to be done for `install-data-am'.
make[2]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/land_utils'
make[1]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/land_utils'
Making install in postprocessing/list_ncvars
make[1]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/list_ncvars'
make[2]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/list_ncvars'
 /usr/bin/mkdir -p '/scratch/users/mborrus/bin'
  /usr/bin/install -c list_ncvars.exe '/scratch/users/mborrus/bin'
 /usr/bin/mkdir -p '/scratch/users/mborrus/bin'
 /usr/bin/install -c list_ncvars.csh '/scratch/users/mborrus/bin'
make[2]: Nothing to be done for `install-data-am'.
make[2]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/list_ncvars'
make[1]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/list_ncvars'
Making install in postprocessing/mppnccombine
make[1]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/mppnccombine'
make[2]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/mppnccombine'
 /usr/bin/mkdir -p '/scratch/users/mborrus/bin'
  /usr/bin/install -c mppnccombine '/scratch/users/mborrus/bin'
make[2]: Nothing to be done for `install-data-am'.
make[2]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/mppnccombine'
make[1]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/mppnccombine'
Making install in postprocessing/plevel
make[1]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/plevel'
make[2]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/plevel'
 /usr/bin/mkdir -p '/scratch/users/mborrus/bin'
  /usr/bin/install -c PLEV.exe PLEV.r4.exe '/scratch/users/mborrus/bin'
 /usr/bin/mkdir -p '/scratch/users/mborrus/bin'
 /usr/bin/install -c plevel.sh '/scratch/users/mborrus/bin'
make[2]: Nothing to be done for `install-data-am'.
make[2]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/plevel'
make[1]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/plevel'
Making install in postprocessing/split_ncvars
make[1]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/split_ncvars'
make[2]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/split_ncvars'
 /usr/bin/mkdir -p '/scratch/users/mborrus/bin'
 /usr/bin/install -c split_ncvars.csh split_ncvars.pl split_ncvars.py varlist.csh '/scratch/users/mborrus/bin'
make[2]: Nothing to be done for `install-data-am'.
make[2]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/split_ncvars'
make[1]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/split_ncvars'
Making install in postprocessing/timavg
make[1]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/timavg'
make[2]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/timavg'
 /usr/bin/mkdir -p '/scratch/users/mborrus/bin'
  /usr/bin/install -c TAVG.exe TAVG.r4.exe '/scratch/users/mborrus/bin'
 /usr/bin/mkdir -p '/scratch/users/mborrus/bin'
 /usr/bin/install -c timavg.csh '/scratch/users/mborrus/bin'
make[2]: Nothing to be done for `install-data-am'.
make[2]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/timavg'
make[1]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/timavg'
Making install in tools/libfrencutils
make[1]: Entering directory `/home/users/mborrus/FRE-NCtools/tools/libfrencutils'
gcc -DHAVE_CONFIG_H -I. -I../..    -I/share/software/user/open/netcdf/4.4.1.1/include -g -O2 -MT create_xgrid.o -MD -MP -MF .deps/create_xgrid.Tpo -c -o create_xgrid.o create_xgrid.c
In file included from create_xgrid.c:23:0:
create_xgrid.c: In function ‘clip_2dx2d’:
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:1313:12: note: in expansion of macro ‘fabs’
         if(fabs(determ) < EPSLN30) {
            ^
create_xgrid.c: In function ‘pimod’:
create_xgrid.c:1344:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int i=0;i<nn;i++) {
   ^
create_xgrid.c:1344:3: note: use option -std=c99 or -std=gnu99 to compile your code
In file included from create_xgrid.c:23:0:
create_xgrid.c: In function ‘line_intersect_2D_3D’:
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2000:6: note: in expansion of macro ‘fabs’
   if(fabs(*u_a) < EPSLN8) *u_a = 0;
      ^
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2001:6: note: in expansion of macro ‘fabs’
   if(fabs(*u_a-1) < EPSLN8) *u_a = 1;
      ^
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2028:6: note: in expansion of macro ‘fabs’
   if(fabs(*u_q) < EPSLN8) *u_q = 0;
      ^
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2029:6: note: in expansion of macro ‘fabs’
   if(fabs(*u_q-1) < EPSLN8) *u_q = 1;
      ^
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2045:6: note: in expansion of macro ‘fabs’
   if(fabs(coincident) < EPSLN30) return 0;
      ^
create_xgrid.c: In function ‘poly_ctrlat’:
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2107:10: note: in expansion of macro ‘fabs’
     if ( fabs(hdy)< SMALL_VALUE ) /* cheap area calculation along latitude */
          ^
create_xgrid.c: In function ‘poly_ctrlon’:
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2151:8: note: in expansion of macro ‘fabs’
     if(fabs(dphi2 -dphi1) < M_PI) {
        ^
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2159:39: note: in expansion of macro ‘fabs’
       fint = f1 + (f2-f1)*(fac-dphi1)/fabs(dphi);
                                       ^
create_xgrid.c: In function ‘box_ctrlon’:
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2219:8: note: in expansion of macro ‘fabs’
     if(fabs(dphi2 -dphi1) < M_PI) {
        ^
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2227:39: note: in expansion of macro ‘fabs’
       fint = f1 + (f2-f1)*(fac-dphi1)/fabs(dphi);
                                       ^
make[1]: *** [create_xgrid.o] Error 1
make[1]: Leaving directory `/home/users/mborrus/FRE-NCtools/tools/libfrencutils'
make: *** [install-recursive] Error 1
